--- a/Store.Api/appsettings.Development.json
+++ b/Store.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "AppDb": "Server=localhost; Database=Store_Dev; Integrated Security=True; Connect Timeout=30; TrustServerCertificate=True"
   }
 }
