--- a/Store.Service/Store.Service.csproj
+++ b/Store.Service/Store.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Store.Contract\Store.Contract.csproj" />
+    <ProjectReference Include="..\Store.Data\Store.Data.csproj" />
+  </ItemGroup>
+
 </Project>
