--- a/Store.Api/Store.Api.csproj
+++ b/Store.Api/Store.Api.csproj
@@ -28,4 +28,13 @@
     <ProjectReference Include="..\Store.Service\Store.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
