--- a/Store.Service/Store.Service.csproj
+++ b/Store.Service/Store.Service.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\Store.Data\Store.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Product\Commands\" />
+    <Folder Include="Product\Queries\" />
+  </ItemGroup>
+
 </Project>
