--- a/Store.Contract/Store.Contract.csproj
+++ b/Store.Contract/Store.Contract.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ProductInOrder\Responses\" />
+    <Folder Include="OrderProduct\Responses\" />
   </ItemGroup>
 
 </Project>
