--- a/Store.Api/appsettings.json
+++ b/Store.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDb": "Server=localhost; Database=Store; Integrated Security=True; Connect Timeout=30; TrustServerCertificate=True"
+    "AppDb": "Server=localhost; Database=Store_Base; Integrated Security=True; Connect Timeout=30; TrustServerCertificate=True"
   }
 }
