--- a/HW05/HW05.MovieManager.WebApi/appsettings.json
+++ b/HW05/HW05.MovieManager.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDb": "Server=localhost; Database=MovieManager_Dev24084; Integrated Security=True; Connect Timeout=30; TrustServerCertificate=True"
+  }
 }
