--- a/HW09_UnitTesting/HW09_HW05.MovieManager.Application.Tests/HW09_HW05.MovieManager.Application.Tests.csproj
+++ b/HW09_UnitTesting/HW09_HW05.MovieManager.Application.Tests/HW09_HW05.MovieManager.Application.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,17 +11,22 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\HW05\HW05.MovieManager.WebApi\HW05.MovieManager.WebApi.csproj" />
+    <Using Include="Xunit" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
+    <Folder Include="CommandsAndQueries\Sessions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\HW05\HW05.MovieManager.Application\HW05.MovieManager.Application.csproj" />
   </ItemGroup>
 
 </Project>
