--- a/HW09_UnitTesting/HW09_HW05.MovieManager.Application.Tests/HW09_HW05.MovieManager.Application.Tests.csproj
+++ b/HW09_UnitTesting/HW09_HW05.MovieManager.Application.Tests/HW09_HW05.MovieManager.Application.Tests.csproj
@@ -10,8 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
@@ -27,6 +29,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\HW05\HW05.MovieManager.Application\HW05.MovieManager.Application.csproj" />
+    <ProjectReference Include="..\..\HW05\HW05.MovieManager.Domain\HW05.MovieManager.Domain.csproj" />
+    <ProjectReference Include="..\..\HW05\HW05.MovieManager.Persistence\HW05.MovieManager.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
