--- a/HW14_Microservices/MovieManagerService/HW14.MovieManager.Api/appsettings.json
+++ b/HW14_Microservices/MovieManagerService/HW14.MovieManager.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "AppDb": "Server=localhost; Database=ZM284_HW14__MovieManager_Dev; Integrated Security=True; Connect Timeout=30; TrustServerCertificate=True"
+  },
+  "OuterServiceEndpoints": {
+    "MovieActors": "https://localhost:24184/api/v1.0/Actor"
   }
 }
