--- a/HW14_Microservices/MovieManagerService/HW14.MovieManager.Service/HW14.MovieManager.Service.csproj
+++ b/HW14_Microservices/MovieManagerService/HW14.MovieManager.Service/HW14.MovieManager.Service.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Polly" Version="8.4.0" />
   </ItemGroup>
